--- a/Group A/group-a.html
+++ b/Group A/group-a.html
@@ -132,7 +132,7 @@
 
         viewAllButton.addEventListener('click', handleViewAll);
         backToPortalButton.addEventListener('click', function() {
-            window.location.href = '../Portal.html';
+            window.location.href = '../index.html';
         });
 
         const sheetButtons = buttonContainer.querySelectorAll('button[data-sheet]');
