Final fix: Corrected BACKEND_URL to actual Render URL

--- a/Group A/group-a.html
+++ b/Group A/group-a.html
@@ -111,7 +111,7 @@
 
 <script>
     // Make sure this URL is correct and points to your deployed Render backend
-    const BACKEND_URL = 'YOUR_RENDER_BACKEND_URL_HERE'; // <-- Confirm this is your actual Render URL
+    const BACKEND_URL = 'https://accounting-project-backend.onrender.com'; // <-- Confirm this is your actual Render URL
 
     const container = document.getElementById('excel-container');
     const saveStatusDiv = document.getElementById('saveStatus'); // Make sure you have <div id="saveStatus"></div> in your HTML
