--- a/Group A/group-a.html
+++ b/Group A/group-a.html
@@ -111,146 +111,27 @@
 
 <script>
     // Make sure this URL is correct and points to your deployed Render backend
-    const BACKEND_URL = 'https://accounting-project-backend.onrender.com'; // <-- Confirm this is your actual Render URL
-
-    const container = document.getElementById('excel-container');
-    const saveStatusDiv = document.getElementById('saveStatus'); // Make sure you have <div id="saveStatus"></div> in your HTML
+    const BACKEND_URL = 'https://accounting-project-backend.onrender.com'; // Your corrected URL
+    const container = document.getElementById('excel-container'); // Or 'sheet-container' if you changed it
+    const saveStatusDiv = document.getElementById('saveStatus');
 
     let hot; // Declare Handsontable instance globally so we can access it
 
+    // *** MOVE THIS LINE HERE ***
+    const activeSheetName = 'CHARTS OF ACCOUNTS'; // Define it once, in a higher scope
+
     // Function to initialize Handsontable with data
     async function initializeHandsontable(data) {
-        // Ensure data is structured correctly for Handsontable
-        // If data is coming from MongoDB, it will be an array of objects like {sheetName, row, col, cellValue}
-        // Handsontable expects a 2D array for its data property
-
-        // For now, let's assume we initialize with a basic 10x10 empty grid,
-        // and then overlay the saved data.
-        const initialData = Handsontable.helper.createEmptySpreadsheetData(10, 10);
-        
-        hot = new Handsontable(container, {
-            data: initialData, // Start with empty data
-            rowHeaders: true,
-            colHeaders: true,
-            width: 'auto',
-            height: 'auto',
-            stretchH: 'all',
-            licenseKey: 'non-commercial-and-evaluation', // For non-commercial use
-            readOnly: false, // Enable editing
-
-            // THIS IS THE CRUCIAL PART FOR UPDATING CELLS
-            afterChange: async function(changes, source) {
-                if (source === 'loadData') { // Don't save when data is loaded initially
-                    return;
-                }
-                if (!changes) { // No changes to process
-                    return;
-                }
-
-                saveStatusDiv.textContent = 'Saving...';
-                saveStatusDiv.style.color = 'orange';
-
-                for (let i = 0; i < changes.length; i++) {
-                    const [row, prop, oldValue, newValue] = changes[i];
-                    // 'prop' is the column header, for Handsontable it's often the column index
-                    const col = typeof prop === 'number' ? prop : Handsontable.helper.columnNameToNumber(prop);
-
-                    // Assuming you have a way to get the current active sheet name
-                    // For now, we'll hardcode 'Sheet1' or get it from a global variable if available
-                    // You might need to adjust this if your frontend handles multiple sheets
-                    const activeSheetName = 'CHARTS OF ACCOUNTS'; // ENSURE NO TRAILING SPACE HERE
-
-                    try {
-                        const response = await fetch(`${BACKEND_URL}/api/updateExcel`, {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify({
-                                sheetName: activeSheetName,
-                                row: row,
-                                col: col,
-                                newValue: newValue
-                            }),
-                        });
-
-                        if (response.ok) {
-                            const result = await response.json();
-                            console.log('Frontend: Save successful', result);
-                            // Update status message based on modifiedCount/upsertedCount
-                            if (result.modifiedCount > 0) {
-                                saveStatusDiv.textContent = 'Saved (Modified)';
-                                saveStatusDiv.style.color = 'green';
-                            } else if (result.upsertedCount > 0) {
-                                saveStatusDiv.textContent = 'Saved (Inserted)';
-                                saveStatusDiv.style.color = 'blue';
-                            } else {
-                                saveStatusDiv.textContent = 'Saved (No Change)';
-                                saveStatusDiv.style.color = 'grey'; // If matchedCount is 1 but modifiedCount is 0
-                            }
-                            // Clear message after a short delay
-                            setTimeout(() => { saveStatusDiv.textContent = ''; }, 3000); 
-
-                        } else {
-                            const errorData = await response.json();
-                            console.error('Frontend: Save failed:', errorData);
-                            saveStatusDiv.textContent = `Error: ${errorData.message || 'Failed to save'}`;
-                            saveStatusDiv.style.color = 'red';
-                             setTimeout(() => { saveStatusDiv.textContent = ''; }, 5000); 
-                        }
-                    } catch (error) {
-                        console.error('Frontend: Network error during save:', error);
-                        saveStatusDiv.textContent = `Network Error: ${error.message}`;
-                        saveStatusDiv.style.color = 'red';
-                         setTimeout(() => { saveStatusDiv.textContent = ''; }, 5000); 
-                    }
-                }
-            }
-        });
-        
-        // After Handsontable is initialized, overlay the saved data
-        // from MongoDB onto the grid.
-        if (data && data.length > 0) {
-            data.forEach(cell => {
-                // Trim both sheet names before comparison to ignore leading/trailing spaces
-                if (cell.sheetName.trim() === activeSheetName.trim()) { // Use activeSheetName for consistency
-                    hot.setDataAtCell(cell.row, cell.col, cell.cellValue, 'loadData');
-                }
-            });
-        }
+        // ... (rest of your initializeHandsontable function) ...
+        // The line `if (cell.sheetName.trim() === activeSheetName.trim())` will now work here.
     }
 
     // Function to fetch data from backend and then initialize Handsontable
     async function loadDataAndInitializeHandsontable() {
-        saveStatusDiv.textContent = 'Loading data...';
-        saveStatusDiv.style.color = 'blue';
-        try {
-            const response = await fetch(`${BACKEND_URL}/api/getExcelData`);
-            if (response.ok) {
-                const savedData = await response.json();
-                console.log('Frontend: Data loaded successfully:', savedData);
-                await initializeHandsontable(savedData); // Initialize with fetched data
-                saveStatusDiv.textContent = 'Data loaded!';
-                saveStatusDiv.style.color = 'green';
-                setTimeout(() => { saveStatusDiv.textContent = ''; }, 2000); 
-            } else {
-                const errorData = await response.json();
-                console.error('Frontend: Failed to load data:', errorData);
-                saveStatusDiv.textContent = `Error loading data: ${errorData.message || 'Failed to load'}`;
-                saveStatusDiv.style.color = 'red';
-                setTimeout(() => { saveStatusDiv.textContent = ''; }, 5000); 
-                // If loading fails, still initialize with empty Handsontable
-                await initializeHandsontable([]); 
-            }
-        } catch (error) {
-            console.error('Frontend: Network error during data load:', error);
-            saveStatusDiv.textContent = `Network Error loading data: ${error.message}`;
-            saveStatusDiv.style.color = 'red';
-            setTimeout(() => { saveStatusDiv.textContent = ''; }, 5000); 
-            // If loading fails, still initialize with empty Handsontable
-            await initializeHandsontable([]); 
-        }
+        // ... (rest of your loadDataAndInitializeHandsontable function) ...
     }
+
+    // ... (The afterChange function - make sure you REMOVE the `const activeSheetName = 'CHARTS OF ACCOUNTS';` line from inside afterChange if it's there, as it will now use the one defined above) ...
 
     // Call the function to load data and initialize Handsontable when the DOM is ready
     document.addEventListener('DOMContentLoaded', loadDataAndInitializeHandsontable);
