Fix: Update dimensions for Sheet1 to 5x16

--- a/Group A/group-a.html
+++ b/Group A/group-a.html
@@ -148,7 +148,7 @@
         const SHEET_DIMENSIONS = {
             'TEAM A.xlsx - CHARTS OF ACCOUNTS': { rows: 20, cols: 2 },
             'TEAM A.xlsx - GENERAL JOURNAL': { rows: 15, cols: 8 },
-            'TEAM A.xlsx - Sheet1': { rows: 3, cols: 1 },
+            'TEAM A.xlsx - Sheet1': { rows: 5, cols: 16 }, // Updated dimensions
             'TEAM A.xlsx - ledger': { rows: 20, cols: 9 },
             'TEAM A.xlsx - Trail Blance': { rows: 20, cols: 5 }
         };
